# vcpkg-test

./: CMakeLists.txt  README.md  azure-pipelines.yml  main.cpp  vcpkg.cmake  vcpkg.json
